--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -39,7 +39,7 @@
    
     </div>
 </div>
-<div class="text-white" style="background-image:url('../../../assets/images/footer-bg.png')" fxShow fxHide.gt-sm>
+<div class="text-white footer-dropdown " style="background-image:url('../../../assets/images/footer-bg.png')" fxShow fxHide.gt-sm>
     <div>
         <mat-form-field class="padding-right-50">
         <mat-label>کیلید</mat-label>
