--- a/src/app/pages/buying/buying.component.css
+++ b/src/app/pages/buying/buying.component.css
@@ -251,10 +251,6 @@
 .city-dropdown {
   flex: 1;
   justify-content: center;
-  text-align: center;
-}
-
-.dropdown {
-  color: black !important;
-  border: 1px solid gray !important;
+  text-align: right;
+  margin: 20px;
 }
